Fix T103354: Author extents on UsdGeomMesh

* Author extent attribute on all meshes
* Move extent authoring to USDAbstractWriter, add support for hair and volumes

Code review changes: use Blender's own bounds cache for meshes