source/blender/io/usd/intern/usd_writer_abstract.cc
@@ -5,11 +5,14 @@
 #include "usd_writer_material.h"
 
 #include <pxr/base/tf/stringUtils.h>
+#include <pxr/usd/usdGeom/bboxCache.h>
 
 #include "BKE_customdata.h"
 #include "BLI_assert.h"
 
 #include "DNA_mesh_types.h"
+
+#include "WM_api.h"
 
 /* TfToken objects are not cheap to construct, so we do it once. */
 namespace usdtokens {
@@ -147,6 +150,39 @@ bool USDAbstractWriter::mark_as_instance(const HierarchyContext &context, const 
   }
 
   return true;
+}
+
+void USDAbstractWriter::author_extent(const pxr::UsdTimeCode timecode, pxr::UsdGeomBoundable &prim)
+{
+  /* Compute the bounds for a boundable prim, and author the result as the extent attribute.
+   *
+   * Although this method works for any boundable prim, it is preferred to use Blender's own
+   * cached bounds when possible.
+   *
+   * This method does not author the extentsHint attribute, which is also important to provide.
+   * Whereas the extent attribute can only be authored on prims inheriting from UsdGeomBoundable,
+   * an extentsHint can be provided on any prim, including scopes.  This extentsHint should be
+   * authored on every prim in a hierarchy being exported.
+   *
+   * Note that this hint is only useful when importing or inspecting layers, and should not be
+   * taken into account when computing extents during export.
+   *
+   * TODO: also provide method for authoring extentsHint on every prim in a hierarchy.
+   */
+  
+  /* do not use any existing extentsHint that may authored, instead recompute the extent when authoring it */
+  const bool useExtentsHint = false;
+  const pxr::TfTokenVector includedPurposes{pxr::UsdGeomTokens->default_};
+  pxr::UsdGeomBBoxCache bboxCache(timecode, includedPurposes, useExtentsHint);
+  pxr::GfBBox3d bounds = bboxCache.ComputeLocalBound(prim.GetPrim());
+  if (pxr::GfBBox3d() == bounds) {
+    /* This will occur, for example, if a mesh does not have any vertices. */
+    WM_reportf(RPT_ERROR, "USD Export: no bounds could be computed for %s", prim.GetPrim().GetName().GetText());
+    return;
+  }
+  
+  pxr::VtArray<pxr::GfVec3f> extent{ (pxr::GfVec3f)bounds.GetRange().GetMin(), (pxr::GfVec3f)bounds.GetRange().GetMax() };
+  prim.CreateExtentAttr().Set(extent);
 }
 
 }  // namespace blender::io::usd
