source/blender/io/usd/intern/usd_writer_hair.cc
@@ -62,6 +62,8 @@ void USDHairWriter::do_write(HierarchyContext &context)
     colors.push_back(pxr::GfVec3f(cache[0]->col));
     curves.CreateDisplayColorAttr(pxr::VtValue(colors));
   }
+
+  this->author_extent(timecode, curves);
 }
 
 bool USDHairWriter::check_is_animated(const HierarchyContext & /*context*/) const
